# autonomic_playground

./: .gitignore  COPYRIGHT  Cargo.toml  Dockerfile  Makefile  README.md  run-server.yml  server_build_run.sh
client/: Cargo.toml
client/src/: main.rs  openapi.rs
client/src/openapi/: controller.rs
pg_kit/: Cargo.toml
pg_kit/src/: conditions.rs  controller.rs  lib.rs  operations.rs
server/: Cargo.toml
server/src/: main.rs
src/client/: Cargo.toml
src/client/src/: main.rs  openapi.rs
src/playground_kit/: Cargo.toml
src/playground_kit/src/: conditions.rs  operations.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/service/: Cargo.toml
src/service/src/: main.rs
