[workspace]
members = [
    "src/client",
    "src/service",
    "src/playground_kit",
]
resolver = "2"

[workspace.package]
name = "autonomic_playground"
version = "0.1.0"
edition = "2021"
description = "A playground for the Autonomic project"
license = "MIT"
readme = "README.md"
repository = "https://github.com/geo-mak/autonomic_playground"

[workspace.dependencies]
autonomic = { git = "https://github.com/geo-mak/autonomic" }
autonomic_playground_kit = { path = "src/playground_kit" }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
