[workspace]
members = [
    "server",
    "client",
    "pg_kit",
]

resolver = "3"

[workspace.package]
name = "autonomic_playground"
version = "0.1.0"
edition = "2024"
description = "A playground for the Autonomic project"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/geo-mak/autonomic_playground"

[workspace.dependencies]
autonomic_api = { git = "https://github.com/geo-mak/autonomic", package = "autonomic_api" }
autonomic_controllers = { git = "https://github.com/geo-mak/autonomic", package = "autonomic_controllers" }
autonomic_service = { git = "https://github.com/geo-mak/autonomic", package = "autonomic_service" }
autonomic_events = { git = "https://github.com/geo-mak/autonomic", package = "autonomic_events" }

pg_kit = { path = "pg_kit" }

tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
lazy_static = "1.5.0"