[package]
name = "client"
version = "0.1.0"
edition = "2024"
description = "The API client of autonomic"
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
autonomic_api.workspace = true
autonomic_controllers.workspace = true
autonomic_service = { workspace = true, features = ["openapi-client"] }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

lazy_static.workspace = true
reqwest = "0.12.9"
tokio-stream = "0.1.16"
