[package]
name = "api_server"
version = "0.1.0"
edition = "2024"
description = "The API server of autonomic"
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
autonomic_operation.workspace = true
autonomic_service = { workspace = true, features = ["openapi-router", "openapi-server-tls"]}

pg_kit.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
