[package]
name = "autonomic_client"
version = "0.1.0"
edition = "2021"
description = "The client side of the Autonomic Playground"
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
autonomic = { workspace = true, features = ["openapi-client"] }
autonomic_playground_kit.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

lazy_static = "1.5.0"
reqwest = "0.12.9"
tokio-stream = "0.1.16"
