[package]
name = "autonomic_playground_kit"
version = "0.1.0"
edition = "2024"
description = "A collection of shared types and utilities for the Autonomic Playground"
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
autonomic_core.workspace = true

tokio.workspace = true
tracing.workspace = true

serde = { version = "1.0.215", features = ["derive"] }
async-trait = "0.1.83"