[package]
name = "autonomic_server"
version = "0.1.0"
edition = "2024"
description = "The server side of the Autonomic Playground"
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
autonomic_core.workspace = true
autonomic_service = { workspace = true, features = ["openapi-router", "openapi-server-tls"]}

autonomic_playground_kit.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
