[package]
name = "autonomic_service"
version = "0.1.0"
edition = "2021"
description = "The server side of the Autonomic Playground"
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
autonomic = {git = "https://github.com/geo-mak/autonomic", features = ["openapi-router", "openapi-server-tls"]}
autonomic_playground_kit = { path = "../playground_kit" }

tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }