[package]
name = "autonomic_service"
version = "0.1.0"
edition = "2021"
description = "The server side of the Autonomic Playground"
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
autonomic = { workspace = true, features = ["openapi-router", "openapi-server-tls"]}
autonomic_playground_kit.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
